fix: resolve CORS credentials wildcard error by configuring dynamic origins in BaoMatConfig